<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/logo_r"
            android:layout_marginBottom="30dp" />

        <EditText
            android:inputType="textPersonName"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:id="@+id/editTextName"
            android:layout_gravity="center_horizontal"
            android:background="@color/fields"
            android:drawableLeft="@drawable/ic_name"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:inputType="textEmailAddress"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/editTextEmail"
            android:layout_gravity="center_horizontal"
            android:background="@color/fields"
            android:drawableLeft="@drawable/ic_email" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:hint="@string/password"
            android:background="@color/fields"
            android:drawableLeft="@drawable/ic_password"
            android:drawableStart="@drawable/ic_password" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_height="wrap_content"
            android:fadingEdge="vertical"
            android:text="@string/registerButton"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:layout_width="150dp"
            android:background="@drawable/my_button"/>

        <TextView
            android:id="@+id/textViewSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/signIn"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</RelativeLayout>